# gmr_plus

./: .gitignore  README.md  pyproject.toml
assets/bimanual/: bimanual.xml  bimanual_assets.xml
assets/bimanual/scene/: myosuite_scene.xml
assets/full_body_model/arm/assets/: myoarm_bimanual_assets.xml  myoarm_bimanual_body.xml
assets/full_body_model/body/: myofullbody.xml
assets/full_body_model/leg/assets/: myolegs_assets.xml  myolegs_chain.xml
assets/full_body_model/meshes/: 1mcL.stl  2distphL.stl  2mcL.stl  2midphL.stl  2proxphL.stl  3distphL.stl  3mcL.stl  3midphL.stl  3proxphL.stl  4distphL.stl  4mcL.stl  4midphL.stl  4proxphL.stl  5distphL.stl  5mcL.stl  5midphL.stl  5proxphL.stl  capitateL.stl  hamateL.stl  lunateL.stl  pisiformL.stl  scaphoidL.stl  thumbdistL.stl  thumbproxL.stl  trapeziumL.stl  trapezoidL.stl  triquetrumL.stl
assets/full_body_model/scene/: myosuite_scene_noPedestal.xml
assets/full_body_model/torso/assets/: myotorso_assets.xml  myotorso_bimanual_chain.xml
examples/: headless_rendering_smplh.py
general_motion_retargeting/: __init__.py  motion_retarget.py  params.py  robot_motion_viewer.py
general_motion_retargeting/ik_configs/: bvh_soma_to_myofullbody.json  smplh_to_myofullbody.json  smplx_to_myofullbody.json
general_motion_retargeting/utils/: lafan1.py  shape_fitting.py  smpl.py  soma.py
scripts/: bvh_to_robot.py  bvh_to_robot_dataset.py  compare_shape_fitting.py  fbx_offline_to_robot.py  fit_smpl_shape.py  gvhmr_to_robot.py  optitrack_to_robot.py  smplh_to_myofullbody.py  smplh_to_robot.py  smplx_to_myofullbody.py  smplx_to_robot.py  smplx_to_robot_dataset.py
tests/: test_gmr_correct_offsets.py  test_robot_model_factory.py
