[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general_motion_retargeting"
version = "0.2.0"
description = "General Motion Retargeting (GMR) for Humanoid Robots with SMPL-H support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yanjie Ze", email = "lastyanjieze@gmail.com"}
]
maintainers = [
    {name = "Chengkun Li", email = "chengkun.li@epfl.ch"}
]
dependencies = [
    "imageio[ffmpeg]>=2.37.2",
    "loop-rate-limiters>=1.2.0",
    "mink>=0.0.13",
    "mujoco>=3.3.6",
    "natsort>=8.4.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "protobuf>=6.33.0",
    "psutil>=7.1.3",
    "qpsolvers[daqp]",
    "redis[hiredis]>=7.0.1",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "smplx",
    "tqdm>=4.67.1",
    "torch>=2.0.0",
    "joblib>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/YanjieZe/GMR"

[tool.setuptools]
packages = {find = {}}

[tool.uv.sources]
smplx = { git = "https://github.com/ZhengyiLuo/smplx" }
